[package]
name = "l337"
version = "0.4.0"
authors = ["Jonathon Sheffield <samsmug@gmail.com>", "Joe Wilm <joe@jwilm.com>"]
license = "MIT OR Apache-2.0"
description = "yet another connection pooler"
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "0.2.11", features = ["rt-core", "time", "macros"] }
crossbeam-queue = "0.2"
failure = "0.1.2"
log = "0.4"
async-trait = "0.1.22"

[workspace]
members = [
  "l337-postgres",
  "l337-redis"
]
