[package]
name = "l337"
version = "0.8.0"
authors = ["Jonathon Sheffield <samsmug@gmail.com>",
           "Joe Wilm <joe@jwilm.com>",
           "keith Noguchi <keith@onesignal.com>"]
license = "MIT OR Apache-2.0"
description = "yet another connection pooler"
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt", "time", "macros"] }
crossbeam-queue = "0.2"
failure = "0.1.2"
tracing = "0.1"
tracing-futures = "0.2"
async-trait = "0.1.22"

[workspace]
members = [
  "l337-postgres",
  "l337-redis"
]
