[package]
name = "l337-postgres"
version = "0.7.0"
authors = ["Jonathon Sheffield <samsmug@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "l337 manager for tokio-postgres"

[dependencies]
l337 = { version = "0.7", path = ".." }
futures = "0.3"
tokio = "1"
tokio-postgres = "0.7"
log = "0.4.8"
async-trait = "0.1.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
