[package]
name = "l337-postgres"
version = "0.11.0"
authors = ["Jonathon Sheffield <samsmug@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "l337 manager for tokio-postgres"

[dependencies]
l337 = { version = "0.11", path = ".." }
futures = "0.3"
tokio = "1"
tokio-postgres = "0.7"
async-trait = "0.1.22"
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
