[package]
name = "l337-redis"
version = "0.3.0"
authors = ["Jonathon Sheffield <samsmug@gmail.com>"]
edition = "2018"

[dependencies]
l337 = { path = ".." }
futures = "0.3"
tokio = "0.2"
redis = "0.14.0"
async-trait = "0.1.22"
log = "0.4"

[dev-dependencies]
# Required for the #[tokio::test] macro
tokio = { version = "0.2", features = ["rt-core", "macros"] }