[package]
name = "l337-postgres"
version = "0.1.0"
authors = ["Jonathon Sheffield <samsmug@gmail.com>"]

[dependencies]
l3-37 = { path = ".." }
futures = "0.1.14"
tokio = "0.1.8"
tokio-postgres = { git = "https://github.com/Cohedrin/rust-postgres.git", rev = "cf5765ea353aa22481c104e3e3b7cc83dffb95f9"}
postgres-shared = { git = "https://github.com/Cohedrin/rust-postgres.git", rev = "cf5765ea353aa22481c104e3e3b7cc83dffb95f9" }
